2000-08-03  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-sh.c (sh_elf_reloc_loop): Warning removal.

2000-07-31  Jason Eckhardt  <jle@cygnus.com>

        * reloc.c (BFD_RELOC_860_*): New bfd relocs for i860.
        * bfd-in2.h, libbfd.h: Regenerate.

2000-07-31  Nick Clifton  <nickc@cygnus.com>

	* section.c (struct sec): Add new boolean field 'segment_mark'.
	(STD_SECTION): Initialise new field to zero.

	* bfd-in2.h: Regenerate.

	* elf.c (copy_private_bfd_data): Reorganise section to segment 
	mapping to cope with moved sections requiring new segments,
	and overlapping segments.
	(SEGMENT_END): New macro: Return the end address of a segment.
	(IS_CONTAINED_BY_VMA): New macro: Determine if a segment
	contains a section by comparing their VMA addresses.
	(IS_CONTAINED_BY_LMA): New macro: Determine if a segment
	contains a section by comparing their LMA addresses.
	(INCLUDE_SECTION_IN_SEGMENT): New macro: Determine if a
	section should be included in a segment.
	(SEGMENT_AFTER_SEGMENT): New macro: Determine if one segment
	follows another in memory.
	(SEGMENT_OVERLAPS_SEGMENT): New macro: Determine if two
	segments overlap.

200007-22  Jason Eckhardt  <jle@cygnus.com>

	* cpu-i860.c: Added comments.

	* elf32-i860.c (TARGET_LITTLE_SYM): Defined to
	bfd_elf32_i860_little_vec.
	(TARGET_LITTLE_NAME): Defined to "elf32-i860-little".
	(ELF_MAXPAGESIZE): Changed to 4096.

	* targets.c (bfd_elf32_i860_little_vec): Declaration of
	new target.
	(bfd_target_vector): Added bfd_elf32_i860_little_vec.

	* config.bfd (i860-stardent-sysv4*, i860-stardent-elf*): Added
	config for little endian elf32 i860.
	(targ_defvec): Define for the new config above
	as "bfd_elf32_i860_little_vec". 
	(targ_selvecs): Define for the new config above
	as "bfd_elf32_i860_vec bfd_elf32_i860_little_vec"

	* configure.in (bfd_elf32_i860_little_vec): Added recognition
	of new target vec.

	* configure: Regenerated.

2000-07-27  H.J. Lu  <hjl@gnu.org>
